--- a/GeneticProgramming.Model/GeneticProgramming.Program/GeneticProgramming.Program.csproj
+++ b/GeneticProgramming.Model/GeneticProgramming.Program/GeneticProgramming.Program.csproj
@@ -23,6 +23,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>39</ApplicationRevision>
+    <ApplicationRevision>40</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
